# xlsynth-crate

./: .gitignore  .pre-commit-config.yaml  .spr.yml  AGENTS.md  Cargo.toml  FUZZ.md  README.md  build.rs  bump_version_numbers.py  check_version_is.py  download_release.py  extract_dso_tag.py  gen_version_compat.py  generated_version_compat.json  get_required_xls_release_tag.py  publish_order.toml  requirements.txt  run_all_fuzz_tests.py  run_valgrind_on_tests.py  sample_codex_maintenance_script.sh  sample_codex_setup_script.sh  spdx_test.toml  valgrind.supp
sample-usage/: Cargo.toml  build.rs
sample-usage/src/: main.rs  multithread.rs  sample.x  sample_with_enum_def.x  sample_with_fail.x  sample_with_stdlib.x  sample_with_struct_def.x  sample_with_use.x  structure_zoo.x
sample-usage/tests/: readme_test.rs
sample_usage/: Cargo.toml  build.rs
sample_usage/src/: main.rs  multithread.rs  sample.x  sample_with_enum_def.x  sample_with_stdlib.x
test-helpers/: Cargo.toml
test-helpers/src/: assert_valid_sv.rs  lib.rs
test-helpers/tests/: spdx_test.rs  version_test.rs
xlsynth/: Cargo.toml
xlsynth-aot-runtime/: Cargo.toml  README.md  build.rs
xlsynth-aot-runtime/src/: lib.rs
xlsynth-aot-runtime/tests/: link_mode_test.rs
xlsynth-autocov/: Cargo.toml  README.md
xlsynth-autocov/src/: ir_fn_autocov_runner.rs  lib.rs  main.rs
xlsynth-block-lang/: Cargo.toml
xlsynth-block-lang/src/: compile.rs  lib.rs  parse.rs  sv.rs
xlsynth-driver/: Cargo.toml  README.md
xlsynth-driver/fuzz/: Cargo.toml
xlsynth-driver/src/: aig2ir.rs  aig2v.rs  aig_equiv.rs  aig_eval.rs  aig_ir_equiv.rs  aig_stats.rs  aig_tech_map.rs  blif2g8r.rs  block2fn.rs  choice_aig_tech_map.rs  common.rs  dslx2ir.rs  dslx2pipeline.rs  dslx2pipeline_eco.rs  dslx2sv_types.rs  dslx_block.rs  dslx_equiv.rs  dslx_fn_eval.rs  dslx_fn_prove_assertions.rs  dslx_g8r_stats.rs  dslx_list_fns.rs  dslx_show.rs  dslx_specialize.rs  dslx_stitch_g8r_pipeline.rs  dslx_stitch_pipeline.rs  flag_defaults.rs  fn_eval.rs  fn_type_arg.rs  g8r2blif.rs  g8r2ir.rs  g8r2ir_block.rs  g8r2ir_fn.rs  g8r2v.rs  g8r_area_table.rs  g8r_cli.rs  g8r_equiv.rs  g8r_eval.rs  g8r_ir_equiv.rs  g8r_optimize.rs  g8r_stitch_pipeline.rs  (+73 more)
xlsynth-driver/tests/: aig_tech_map_and_gv_sta_test.rs  block2fn_test.rs  driver_dslx2pipeline_eco_test.rs  driver_dslx2pipeline_test.rs  dslx2ir_convert_tests_test.rs  dslx_block_cli_test.rs  dslx_block_e2e_test.rs  dslx_fn_eval_errors_test.rs  dslx_fn_eval_float32_test.rs  dslx_fn_eval_test.rs  dslx_fn_prove_assertions_test.rs  dslx_list_fns_test.rs  dslx_specialize_test.rs  dslx_stitch_pipeline_flags_test.rs  dslx_stitch_pipeline_ir_outputs_test.rs  extern_verilog_codegen_policy_test.rs  g8r_optimize_test.rs  gv2aig_test.rs  gv_dump_cone_test.rs  gv_eval_test.rs  gv_instance_csv_test.rs  gv_levels_test.rs  gv_report_test.rs  gv_sta_test.rs  gv_stats_test.rs  invoke_test.rs  ir_fn_mffcs_test.rs  ir_round_trip_block_tests.rs  ir_structural_similarity_tests.rs  lib2proto_pretty.golden.textproto  lib2proto_test.rs  liberty_proto_info.golden.txt  liberty_proto_info_gz.golden.txt  test_dslx2pipeline_array_index_bounds_checking_enum_cast_false.golden.sv  test_dslx2pipeline_array_index_bounds_checking_enum_cast_true.golden.sv  test_dslx2pipeline_reset_data_path_false.golden.sv  test_dslx2pipeline_reset_data_path_true.golden.sv  test_dslx2pipeline_with_reset_signal.golden.sv  test_dslx2pipeline_with_update_of_1d_array.golden.sv  test_dslx_add_sub_opt_ir2gates_pipeline.golden.ir  (+40 more)
xlsynth-dslx-routines/: Cargo.toml
xlsynth-dslx-routines/src/: lib.rs
xlsynth-dslx-routines/tests/: g8r_qor.rs  quickcheck_proofs.rs
xlsynth-estimator/: Cargo.toml  build.rs
xlsynth-estimator/proto/: estimator_model.proto  sample_node.proto
xlsynth-estimator/src/: estimator.rs  main.rs
xlsynth-g8r/: Cargo.toml  README.md  build.rs
xlsynth-g8r/benches/: bf16_mul_gatesim_bench.rs  cut_db_load_bench.rs  dynamic_depth_bench.rs  dynamic_structural_hash_bench.rs  gatify_bench.rs  ir2gates_mul_width_bench.rs  mcmc_benchmark.rs  netlist_parse_bench.rs  sim_vs_simd_bench.rs  toggle_count_bench.rs
xlsynth-g8r/docs/: g8r_lib_timing_design.md  tech_mapper_design.md
xlsynth-g8r/fuzz/: Cargo.toml  FUZZ.md
xlsynth-g8r/proto/: liberty.proto  result.proto
xlsynth-g8r/src/: aig_hasher.rs  aig_simplify.rs  block2sequential.rs  bulk_replace.rs  check_equivalence.rs  count_toggles.rs  cut_db_cli_defaults.rs  dce.rs  diverse_samples.rs  dslx_stitch_pipeline.rs  emit_aiger.rs  emit_netlist.rs  emitted_netlist_parser.rs  fanout.rs  find_structures.rs  fraig.rs  fuzz_utils.rs  gate.rs  gate2ir.rs  gate_builder.rs  gate_fn_equiv_report.rs  gate_fn_optimize.rs  gate_parser.rs  gate_sim.rs  gate_simd.rs  get_summary_stats.rs  graph_logical_effort.rs  ir.rs  ir2gate.rs  ir2gate_utils.rs  ir2gates.rs  ir_aig_sharing.rs  ir_equiv_boolector.rs  ir_node_env.rs  ir_parser.rs  ir_range_info.rs  ir_utils.rs  ir_value_utils.rs  lib.rs  liberty_loader.rs  (+19 more)
xlsynth-g8r/tests/: add_const_pow2m1_gate_stats_sweep_test.rs  array_index_gate_stats_sweep_test.rs  array_index_lowering_equiv_test.rs  aug_opt_add_ne_all_ones_qor_test.rs  aug_opt_affine_shift_amount_equiv.rs  aug_opt_affine_shift_amount_qor.rs  aug_opt_selected_opposite_subtracts_qor.rs  aug_opt_shll_literal_qor_test.rs  block2sequential_test.rs  clz_gate_stats_sweep_test.rs  cmp_const_equiv_test.rs  cmp_gate_stats_sweep_test.rs  cmp_proof_sweep_test.rs  emit_netlist_integration_test.rs  encode_one_hot_gate_stats_sweep_test.rs  ext_carry_out_prep_for_gatify_equiv.rs  ext_clz_ir2gates_equiv.rs  ext_mask_low_ir2gates_equiv.rs  ext_mask_low_prep_for_gatify_equiv.rs  ext_nary_add_architecture_ir2gates_test.rs  (+40 more)
xlsynth-mcmc/: Cargo.toml
xlsynth-mcmc-pir/: Cargo.toml
xlsynth-pir/: Cargo.toml
xlsynth-pir-compiler/: Cargo.toml
xlsynth-pir-compiler-runtime/: Cargo.toml
xlsynth-prover/: Cargo.toml  README.md
xlsynth-spdx-test/: Cargo.toml  README.md
xlsynth-sys/: Cargo.toml  artifact_config.rs  build.rs
xlsynth-test-helpers/: Cargo.toml
xlsynth-vastly/: .gitignore  Cargo.toml  README.md
(+831 files in other folders)
