[workspace]
members = [
    "xlsynth",
    "xlsynth/tests/aot-test-crate",
    "xlsynth-sys",
    "xlsynth-mcmc",
    "xlsynth-mcmc-pir",
    "xlsynth-driver",
    "xlsynth-estimator",
    "xlsynth-g8r",
    "xlsynth-pir",
    "xlsynth-prover",
    "xlsynth-autocov",
    "sample-usage",
]
resolver = "2"

[workspace.lints.rust]
warnings = "deny"
