[workspace]
members = [
    "xlsynth",
    "xlsynth-sys",
    "xlsynth-mcmc",
    "xlsynth-mcmc-pir",
    "xlsynth-driver",
    "xlsynth-estimator",
    "xlsynth-g8r",
    "xlsynth-pir-compiler-runtime",
    "xlsynth-pir-compiler",
    "xlsynth-pir-compiler/tests/aot-dslx-test-crate",
    "xlsynth-pir-compiler/tests/aot-ir-test-crate",
    "xlsynth-pir",
    "xlsynth-prover",
    "xlsynth-autocov",
    "xlsynth-vastly",
    "xlsynth-dslx-routines",
    "sample-usage",
]
resolver = "2"

[workspace.lints.rust]
warnings = "deny"
