[package]
name = "sample-usage"
version = "0.0.185"
edition = "2021"

[dependencies]
xlsynth = { path = "../xlsynth" }
log = "0.4"
env_logger = "0.11"
num_cpus = "1.0"
rayon = "1.10"
lazy_static = "1.4"
mimalloc = "0.1.43"

[build-dependencies]
xlsynth = { path = "../xlsynth" }

[dev-dependencies]
cargo_metadata = "0.18"
xlsynth-sys = { path = "../xlsynth-sys" }
