[package]
name = "sample-usage"
version = "0.59.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
xlsynth = { path = "../xlsynth" }
log = "0.4"
env_logger = "0.11"
num_cpus = "1.0"
rayon = "1.10"
lazy_static = "1.4"
mimalloc = "0.1.43"

[dev-dependencies]
cargo_metadata = "0.23"
xlsynth-sys = { path = "../xlsynth-sys" }
