[package]
name = "sample_usage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xlsynth = { path = "../xlsynth" }
log = "0.4"
env_logger = "0.11"
num_cpus = "1.0"
rayon = "1.10"
lazy_static = "1.4"
mimalloc = "0.1.43"
