[package]
name = "test-helpers"
version = "0.0.142"
edition = "2018"
publish = false

[dependencies]
slang-rs = "0.12.0"
tempfile = "3.13"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
xlsynth-sys = { path = "../xlsynth-sys" }
cargo_metadata = "0.18"
xlsynth = { path = "../xlsynth" }
toml = "0.5"
curl = "0.4"
serde_json = "1.0"
semver = "1.0"
