# SPDX-License-Identifier: Apache-2.0

[package]
name = "xlsynth-aot-runtime"
version = "0.58.0"
edition = "2024"
authors = ["Christopher D. Leary <cdleary@gmail.com>"]
description = "Standalone runtime support for xlsynth AOT artifacts"
license = "Apache-2.0"
repository = "https://github.com/xlsynth/xlsynth-crate"
documentation = "https://docs.rs/xlsynth-aot-runtime"
homepage = "https://github.com/xlsynth/xlsynth-crate"

[lints]
workspace = true

[build-dependencies]
toml = "0.8"

[dev-dependencies]
tempfile = "3"
