[package]
name = "xlsynth-driver"
version = "0.0.141"
edition = "2021"

authors = ["Christopher D. Leary <cdleary@gmail.com>"]
description = "Binary that integrates XLS capabilities into a driver program"
license = "Apache-2.0"
repository = "https://github.com/xlsynth/xlsynth-crate"
documentation = "https://docs.rs/xlsynth"
homepage = "https://github.com/xlsynth/xlsynth-crate"

[dependencies]
xlsynth = { path = "../xlsynth", version = "0.0.141" }
xlsynth-g8r = { path = "../xlsynth-g8r", version = "0.0.141" }
clap = "4.5.21"
tempfile = "3.3"
toml = "0.8.19"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"

[dev-dependencies]
test-helpers = { path = "../test-helpers" }
test-case = "3.3.1"
pretty_assertions = "1.3"
regex = "1.11.1"

[build-dependencies]
prost-build = "0.12"

[features]
default = []
has-boolector = ["xlsynth-g8r/has-boolector"]
# Enables boolector support, defaulting to system linking
with-boolector-system = ["xlsynth-g8r/with-boolector-system", "has-boolector"]
# Enables boolector support AND builds it from source
with-boolector-built = ["xlsynth-g8r/with-boolector-built", "has-boolector"]
