[package]
name = "xlsynth-driver"
version = "0.25.0"
edition = "2021"

authors = ["Christopher D. Leary <cdleary@gmail.com>"]
description = "Binary that integrates XLS capabilities into a driver program"
license = "Apache-2.0"
repository = "https://github.com/xlsynth/xlsynth-crate"
documentation = "https://docs.rs/xlsynth"
homepage = "https://github.com/xlsynth/xlsynth-crate"

[lints]
workspace = true

[dependencies]
xlsynth = { path = "../xlsynth", version = "0.25.0" }
xlsynth-g8r = { path = "../xlsynth-g8r", version = "0.25.0" }
xlsynth-pir = { path = "../xlsynth-pir", version = "0.25.0" }
xlsynth-prover = { path = "../xlsynth-prover", version = "0.25.0" }
clap = "4.5.21"
tempfile = "3.20"
toml = "0.8.19"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
prost = "0.12.6"
prost-types = "0.12.6"
prost-reflect = { version = "0.12.0", features = ["text-format"] }
bincode = "1.3"
rand_xoshiro = "0.6"
rand = "0.8"
once_cell = "1.19"
paste = "1.0.15"
regex = "1.11.1"
anyhow = "1.0"
which = "5.0"
libc = "0.2"
signal-hook = "0.3"
flate2 = "1.0"
comfy-table = "7.2"
csv = "1"

[dev-dependencies]
xlsynth-test-helpers = { path = "../xlsynth-test-helpers" }
test-case = "3.3.1"
pretty_assertions = "1.4.1"

[build-dependencies]
prost-build = "0.12"
glob = "0.3"

[features]
default = []
unstable-dslx-specialize = ["xlsynth-prover/unstable-dslx-specialize"]
has-boolector = ["xlsynth-prover/has-boolector"]
has-easy-smt = ["xlsynth-prover/has-easy-smt"]
has-bitwuzla = ["xlsynth-prover/has-bitwuzla"]
# Enables boolector support, defaulting to system linking
with-boolector-system = ["xlsynth-prover/with-boolector-system", "has-boolector"]
# Enables boolector support AND builds it from source
with-boolector-built = ["xlsynth-prover/with-boolector-built", "has-boolector"]
with-z3-system = ["xlsynth-g8r/with-z3-system"]
with-z3-built = ["xlsynth-g8r/with-z3-built"]
with-easy-smt = ["xlsynth-prover/with-easy-smt", "has-easy-smt"]
with-boolector-binary-test = ["xlsynth-prover/with-easy-smt", "with-easy-smt"]
with-bitwuzla-binary-test = ["xlsynth-prover/with-easy-smt", "with-easy-smt"]
with-z3-binary-test = ["xlsynth-prover/with-easy-smt", "with-easy-smt"]
with-bitwuzla-system = ["xlsynth-prover/with-bitwuzla-system", "has-bitwuzla"]
with-bitwuzla-built = ["xlsynth-prover/with-bitwuzla-built", "has-bitwuzla"]
# Enable a fake task kind and lightweight shell-based worker for scheduler fuzzing and testing.
enable-fake-task = []
