[package]
name = "xlsynth-estimator"
version = "0.0.123"
edition = "2021"

authors = ["Christopher D. Leary <cdleary@gmail.com>"]
description = "Delay estimation facilities via Rust"
license = "Apache-2.0"
repository = "https://github.com/xlsynth/xlsynth-crate"
documentation = "https://docs.rs/xlsynth"
homepage = "https://github.com/xlsynth/xlsynth-crate"

[dependencies]
prost = "0.12"
prost-types = "0.12"
prost-reflect = { version = "0.12", features = ["text-format"] }
nnls = "0.3"
ndarray = { version="0.15", features = ["approx-0_5"] }
log = "0.4"
env_logger = "0.11"

[build-dependencies]
prost-build = "0.12"
