[package]
name = "xlsynth-g8r"
version = "0.0.132"
edition = "2021"
authors = ["Christopher D. Leary <cdleary@gmail.com>"]
description = "XLS IR to gate mapping"
license = "Apache-2.0"
repository = "https://github.com/xlsynth/xlsynth-crate"
documentation = "https://docs.rs/xlsynth"
homepage = "https://github.com/xlsynth/xlsynth-crate"

[dependencies]
xlsynth = { path = "../xlsynth", version = "0.0.132" }
env_logger = "0.11"
log = "0.4"
clap = { version = "4.5.21", features = ["derive"] }
tempfile = "3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = { version = "1.1", features = ["zlib-rs"], default-features = false }
half = "2.6"
blake3 = "1.5"
once_cell = "1.19"
bitvec = "1.0.1"
rand = "0.8.5"
varisat = "0.2.2"
rand_xoshiro = "0.6"
num-traits = "0.2.19"
boolector = { version = "0.4.3", features = ["vendor-lgl"] }

[dev-dependencies]
anyhow = "1.0.86"
arbitrary = { version = "1.3", features = ["derive"] }
cargo_metadata = "0.19.2"
criterion = "0.5"
libfuzzer-sys = "0.4"
pretty_assertions = "1.4.1"
regex = "1.10.5"
test-case = "3.3.1"
maplit = "1.0.2"

[lib]
name = "xlsynth_g8r"
path = "src/lib.rs"

[[bin]]
name = "g8r"
path = "src/main.rs"

[[bin]]
name = "try-parse-liberty"
path = "src/liberty/try_parse.rs"

[[bench]]
name = "bf16_mul_gatesim_bench"
harness = false

[[bench]]
name = "gatify_bench"
harness = false
