[package]
name = "xlsynth-g8r"
version = "0.0.166"
edition = "2024"
authors = ["Christopher D. Leary <cdleary@gmail.com>"]
description = "XLS IR to gate mapping"
license = "Apache-2.0"
repository = "https://github.com/xlsynth/xlsynth-crate"
documentation = "https://docs.rs/xlsynth"
homepage = "https://github.com/xlsynth/xlsynth-crate"

[dependencies]
xlsynth = { path = "../xlsynth", version = "0.0.166" }
env_logger = "0.11"
log = "0.4"
clap = { version = "4.5.21", features = ["derive"] }
num_cpus = "1.16"
tempfile = "3.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = { version = "1.1", features = ["zlib-rs"], default-features = false }
half = "2.6"
blake3 = "1.5"
once_cell = "1.19"
bitvec = "1.0.1"
rand = { version = "0.8.5", features = ["std"] }
varisat = "0.2.2"
z3 = { version = "0.12", optional = true }
rand_xoshiro = "0.6"
num-traits = "0.2.19"
boolector = { version = "0.4.3", optional = true }
boolector-sys = { version = "0.7.2", optional = true }
easy-smt = { version = "0.3.1", optional = true }
prost = "0.12.6"
prost-types = "0.12.6"
prost-reflect = { version = "0.12.0", features = ["text-format"] }
string-interner = "0.14"
anyhow = "1.0.86"
rand_pcg = "0.3.1"
ahash = "0.8.12"
rand_core = { version = "0.9.3", features = ["std"] }
ctrlc = { version = "3.4.4", features = ["termination"] }
libc = "0.2"
colored = "3.0.0"
atty = "0.2"
bincode = "1.3"
bitwuzla-sys = { version = "0.8.0", optional = true }

[dev-dependencies]
anyhow = "1.0.86"
arbitrary = { version = "1.3", features = ["derive"] }
cargo_metadata = "0.19.2"
criterion = "0.5"
libfuzzer-sys = "0.4"
pretty_assertions = "1.4.1"
regex = "1.10.5"
test-case = "3.3.1"
maplit = "1.0.2"
prost-build = "0.12"
tempfile = "3.20"
xlsynth-test-helpers = { path = "../xlsynth-test-helpers", version = "0.0.166" }

[build-dependencies]
prost-build = "0.12"

[features]
default = []
has-boolector = []
has-bitwuzla = []
has-easy-smt = []
with-boolector-system = ["dep:boolector", "dep:boolector-sys", "has-boolector"]
with-boolector-built = ["dep:boolector", "dep:boolector-sys", "boolector/vendor-lgl", "has-boolector"]
with-z3-system = ["dep:z3"]
with-z3-built = ["dep:z3", "z3/static-link-z3"]
with-easy-smt = ["dep:easy-smt", "has-easy-smt"]
with-boolector-binary-test = ["with-easy-smt"]
with-bitwuzla-binary-test = ["with-easy-smt"]
with-z3-binary-test = ["with-easy-smt"]
with-bitwuzla-system = ["dep:bitwuzla-sys", "has-bitwuzla"]
with-bitwuzla-built = ["dep:bitwuzla-sys", "bitwuzla-sys/vendor-cadical", "has-bitwuzla"]

[lib]
name = "xlsynth_g8r"
path = "src/lib.rs"

[[bin]]
name = "g8r"
path = "src/main.rs"

[[bin]]
name = "try-parse-liberty"
path = "src/liberty/try_parse.rs"

[[bin]]
name = "check-ir-equivalence"
path = "src/bin/check-ir-equivalence.rs"

[[bin]]
name = "mcmc-driver"
path = "src/bin/mcmc-driver.rs"

[[bench]]
name = "bf16_mul_gatesim_bench"
harness = false

[[bench]]
name = "gatify_bench"
harness = false

[[bench]]
name = "mcmc_benchmark"
harness = false

[[bench]]
name = "sim_vs_simd_bench"
harness = false
