[package]
name = "xlsynth-mcmc-pir"
version = "0.31.0"
edition = "2024"
authors = ["Christopher D. Leary <cdleary@gmail.com>"]
description = "PIR-based MCMC optimization using the shared xlsynth-mcmc engine"
license = "Apache-2.0"
repository = "https://github.com/xlsynth/xlsynth-crate"
documentation = "https://docs.rs/xlsynth"
homepage = "https://github.com/xlsynth/xlsynth-crate"

[lints]
workspace = true

[dependencies]
xlsynth-mcmc = { path = "../xlsynth-mcmc", version = "0.31.0" }
xlsynth-pir = { path = "../xlsynth-pir", version = "0.31.0" }
xlsynth = { path = "../xlsynth", version = "0.31.0" }
xlsynth-g8r = { path = "../xlsynth-g8r", version = "0.31.0" }
xlsynth-prover = { path = "../xlsynth-prover", version = "0.31.0" }
anyhow = "1.0.86"
rand = { version = "0.8.5", features = ["std"] }
rand_pcg = "0.3.1"
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
tempfile = "3.20"
num_cpus = "1.16"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }

[features]
default = []

# Formal equivalence oracle backend selection (mirrors xlsynth-driver / xlsynth-prover).
with-boolector-system = ["xlsynth-prover/with-boolector-system"]
with-boolector-built = ["xlsynth-prover/with-boolector-built"]
with-easy-smt = ["xlsynth-prover/with-easy-smt"]
with-boolector-binary-test = ["xlsynth-prover/with-boolector-binary-test"]
with-bitwuzla-binary-test = ["xlsynth-prover/with-bitwuzla-binary-test"]
with-z3-binary-test = ["xlsynth-prover/with-z3-binary-test"]
with-bitwuzla-system = ["xlsynth-prover/with-bitwuzla-system"]
with-bitwuzla-built = ["xlsynth-prover/with-bitwuzla-built"]

[lib]
name = "xlsynth_mcmc_pir"
path = "src/lib.rs"

[[bin]]
name = "pir-mcmc-driver"
path = "src/bin/pir-mcmc-driver.rs"

[[bin]]
name = "xlsynth-mcmc-pir-sampler"
path = "src/bin/xlsynth-mcmc-pir-sampler.rs"
