[package]
name = "xlsynth-mcmc"
version = "0.34.0"
edition = "2024"
authors = ["Christopher D. Leary <cdleary@gmail.com>"]
description = "Shared MCMC infrastructure for xlsynth-* crates"
license = "Apache-2.0"
repository = "https://github.com/xlsynth/xlsynth-crate"
documentation = "https://docs.rs/xlsynth"
homepage = "https://github.com/xlsynth/xlsynth-crate"

[lints]
workspace = true

[dependencies]
rand = { version = "0.8.5", features = ["std"] }

[lib]
name = "xlsynth_mcmc"
path = "src/lib.rs"
