[package]
name = "xlsynth-pir-compiler-runtime"
version = "0.53.0"
edition = "2024"
authors = ["Christopher D. Leary <cdleary@gmail.com>"]
description = "Runtime support for native compiled xlsynth PIR functions"
license = "Apache-2.0"
repository = "https://github.com/xlsynth/xlsynth-crate"
documentation = "https://docs.rs/xlsynth"
homepage = "https://github.com/xlsynth/xlsynth-crate"

[lints]
workspace = true

[dependencies]
num-bigint = "0.4.6"

[lib]
name = "xlsynth_pir_compiler_runtime"
path = "src/lib.rs"
