[package]
name = "xlsynth-pir-compiler"
version = "0.58.0"
edition = "2024"
authors = ["Christopher D. Leary <cdleary@gmail.com>"]
description = "Rust-native compilation for xlsynth PIR functions"
license = "Apache-2.0"
repository = "https://github.com/xlsynth/xlsynth-crate"
documentation = "https://docs.rs/xlsynth"
homepage = "https://github.com/xlsynth/xlsynth-crate"

[lints]
workspace = true

[dependencies]
cranelift-codegen = "0.132.0"
cranelift-frontend = "0.132.0"
cranelift-jit = "0.132.0"
cranelift-module = "0.132.0"
cranelift-native = "0.132.0"
cranelift-object = "0.132.0"
cc = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
target-lexicon = "0.13.5"
thiserror = "1"
xlsynth = { path = "../xlsynth", version = "0.58.0" }
xlsynth-pir = { path = "../xlsynth-pir", version = "0.58.0" }
xlsynth-pir-compiler-runtime = { path = "../xlsynth-pir-compiler-runtime", version = "0.58.0" }

[dev-dependencies]
criterion = "0.5"

[lib]
name = "xlsynth_pir_compiler"
path = "src/lib.rs"

[[bench]]
name = "aot_performance"
harness = false
