[package]
name = "xlsynth-pir"
version = "0.27.0"
edition = "2024"
authors = ["Christopher D. Leary <cdleary@gmail.com>"]
description = "partial XLS IR focused on functions"
license = "Apache-2.0"
repository = "https://github.com/xlsynth/xlsynth-crate"
documentation = "https://docs.rs/xlsynth"
homepage = "https://github.com/xlsynth/xlsynth-crate"

[lints]
workspace = true

[dependencies]
xlsynth = { path = "../xlsynth", version = "0.27.0" }
env_logger = "0.11"
log = "0.4"
clap = { version = "4.5.21", features = ["derive"] }
arbitrary = { version = "1.3", features = ["derive"] }
blake3 = "1.5"
rand = "0.8"
rand_pcg = "0.3.1"
tempfile = "3.20"
bitvec = "1.0.1"
sha2 = "0.10"

[dev-dependencies]
maplit = "1.0.2"
pretty_assertions = "1.4.1"
criterion = "0.3"

[lib]
name = "xlsynth_pir"
path = "src/lib.rs"

[[bench]]
name = "eco"
harness = false
