[package]
name = "xlsynth-sys"
version = "0.0.141"
edition = "2018"
authors = ["Christopher D. Leary <cdleary@gmail.com>"]
description = "Accelerated Hardware Synthesis (XLS/XLSynth) via Rust (Native Library)"
license = "Apache-2.0"
repository = "https://github.com/xlsynth/xlsynth-crate"
documentation = "https://docs.rs/xlsynth"
homepage = "https://github.com/xlsynth/xlsynth-crate"
links = "xlsynth"

[dependencies]
libc = "0.2"

[build-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
flate2 = "1.0"
tar = "0.4"
sha2 = "0.10"
