[package]
name = "xlsynth-test-helpers"
version = "0.0.142"
edition = "2018"
authors = ["Christopher D. Leary <cdleary@gmail.com>"]
description = "xlsynth test helpers"
license = "Apache-2.0"
repository = "https://github.com/xlsynth/xlsynth-crate"
documentation = "https://docs.rs/xlsynth"
homepage = "https://github.com/xlsynth/xlsynth-crate"

[dependencies]
slang-rs = "0.12.0"
tempfile = "3.13"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
xlsynth-sys = { path = "../xlsynth-sys" }
cargo_metadata = "0.18"
xlsynth = { path = "../xlsynth" }
toml = "0.5"
curl = "0.4"
serde_json = "1.0"
semver = "1.0"
