[package]
name = "xlsynth-test-helpers"
version = "0.20.0"
edition = "2018"
authors = ["Christopher D. Leary <cdleary@gmail.com>"]
description = "xlsynth test helpers"
license = "Apache-2.0"
repository = "https://github.com/xlsynth/xlsynth-crate"
documentation = "https://docs.rs/xlsynth"
homepage = "https://github.com/xlsynth/xlsynth-crate"

[dependencies]
slang-rs = "0.12.0"
tempfile = "3.20"
log = "0.4"
env_logger = "0.11"
xlsynth = { version = "0.20.0", path = "../xlsynth" }
arbitrary = { version = "1.3", features = ["derive"] }
pretty_assertions = "1.4.1"

[dev-dependencies]
xlsynth-sys = { path = "../xlsynth-sys" }
cargo_metadata = "0.18"
toml = "0.5"
curl = "0.4"
serde_json = "1.0"
semver = "1.0"
