[package]
name = "xlsynth-vastly"
version = "0.49.0"
edition = "2024"
authors = ["Christopher D. Leary <cdleary@gmail.com>"]
description = "Simulation and VCD-oriented utilities for generated Verilog/SystemVerilog"
license = "Apache-2.0"
repository = "https://github.com/xlsynth/xlsynth-crate"
documentation = "https://docs.rs/xlsynth"
homepage = "https://github.com/xlsynth/xlsynth-crate"

[lints]
workspace = true

[lib]
name = "xlsynth_vastly"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
xlsynth = { path = "../xlsynth", version = "0.49.0", optional = true }

[features]
default = []
irvals = ["dep:xlsynth"]
reference-sim-tests = []
