[package]
name = "xlsynth"
version = "0.0.49"
edition = "2018"
authors = ["Christopher D. Leary <cdleary@gmail.com>"]
description = "Accelerated Hardware Synthesis (XLS/XLSynth) via Rust"
license = "Apache-2.0"
repository = "https://github.com/xlsynth/xlsynth-crate"
documentation = "https://docs.rs/xlsynth"
homepage = "https://github.com/xlsynth/xlsynth-crate"

# Specify the path to the top-level README.md
readme = "../README.md"

[dependencies]
xlsynth-sys = {path = "../xlsynth-sys", version = "0.0.49"}
cargo_metadata = "0.18"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
pretty_assertions = "1.3"
test-helpers = { path = "../test-helpers" }