[package]
name = "xlsynth"
version = "0.33.0"
edition = "2018"
authors = ["Christopher D. Leary <cdleary@gmail.com>"]
description = "Accelerated Hardware Synthesis (XLS/XLSynth) via Rust"
license = "Apache-2.0"
repository = "https://github.com/xlsynth/xlsynth-crate"
documentation = "https://docs.rs/xlsynth"
homepage = "https://github.com/xlsynth/xlsynth-crate"

# Specify the path to the top-level README.md
readme = "../README.md"

[lints]
workspace = true

[dependencies]
xlsynth-sys = {path = "../xlsynth-sys", version = "0.33.0"}
cargo_metadata = "0.18"
thiserror = "1"
log = "0.4"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
libc = "0.2"

[dev-dependencies]
env_logger = "0.11"
pretty_assertions = "1.4.1"
xlsynth-test-helpers = { path = "../xlsynth-test-helpers" }
lazy_static = "1.4"
criterion = "0.3"

[[bench]]
name = "call_dslx"
harness = false

[[bench]]
name = "build_f32_tuple"
harness = false

[[bench]]
name = "bits_ops"
harness = false

[[bench]]
name = "f32_add"
harness = false

[[bench]]
name = "ir_value_bench"
harness = false
