[package]
name = "xlsynth-driver-fuzz"
version = "0.30.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
xlsynth-driver = { path = "..", features = ["enable-fake-task"], version = "0.30.0" }

[lib]
name = "xlsynth_driver_fuzz"
path = "src/lib.rs"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_prover_scheduler"
path = "fuzz_targets/fuzz_prover_scheduler.rs"
test = false
doc = false

[features]
# Pass-through toggles for optional solver integrations if needed later.
default = []
