[package]
name = "xlsynth-g8r-fuzz"
version = "0.0.164"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
xlsynth = { path = "../../xlsynth", version = "0.0.164" }
rand = "0.8"
xlsynth-test-helpers = { path = "../../xlsynth-test-helpers" }
xlsynth-g8r = { path = "../../xlsynth-g8r", features = ["with-boolector-system", "with-z3-system"] }

[lib]
name = "xlsynth_g8r_fuzz"
path = "src/lib.rs"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_gatify"
path = "fuzz_targets/fuzz_gatify.rs"
test = false
doc = false

[[bin]]
name = "fuzz_bulk_replace"
path = "fuzz_targets/fuzz_bulk_replace.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ir_opt_equiv"
path = "fuzz_targets/fuzz_ir_opt_equiv.rs"
test = false
doc = false

[[bin]]
name = "fuzz_gate_fn_roundtrip"
path = "fuzz_targets/fuzz_gate_fn_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "fuzz_gate_transform_equiv"
path = "fuzz_targets/fuzz_gate_transform_equiv.rs"
test = false
doc = false

[[bin]]
name = "fuzz_gate_transform_arbitrary"
path = "fuzz_targets/fuzz_gate_transform_arbitrary.rs"
test = false
doc = false

[[bin]]
name = "fuzz_gate_fn_aiger_roundtrip"
path = "fuzz_targets/fuzz_gate_fn_aiger_roundtrip.rs"
test = false
doc = false
